# expedia-hotel-ranking

./: .gitignore  README.md  config.py  pyproject.toml  run_pipeline.sh
docs/: approach.md  decisions.md
src/: 00_data_check.py  01_eda.py  02_feature_engineering.py  02b_feature_v2_aggregates.py  02c_feature_v3_nontarget.py  03_split.py  04_train_lgbm.py  05_train_baseline.py  06_evaluate.py  07_predict.py  08_bias_analysis.py  utils.py
