[project]
name = "expedia-hotel-ranking"
version = "0.1.0"
description = "Hotel search ranking pipeline using LightGBM LambdaRank"
requires-python = ">=3.10"
dependencies = [
    "lightgbm",
    "pandas",
    "numpy",
    "scikit-learn",
    "pyarrow",
    "matplotlib",
    "joblib",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools]
py-modules = ["config"]
